cabal-version: 1.12

name:           adventofcode2018
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/purcell/adventofcode2018#readme>
homepage:       https://github.com/purcell/adventofcode2018#readme
bug-reports:    https://github.com/purcell/adventofcode2018/issues
author:         Steve Purcell
maintainer:     steve@sanityinc.com
copyright:      2018 Steve Purcell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/purcell/adventofcode2018

library
  exposed-modules:
                  Day01
                , Day02
  hs-source-dirs:
      src
  build-depends:
                base >=4.7 && <5
              , containers
              , megaparsec
              , text
  default-language: Haskell2010

